objects/Financial_Information__c.object
<CustomObject>
    <fields>
        <fullName>Capex__c</fullName>
        <label>Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Generated_by_Operations__c</fullName>
        <label>Cash Generated by Operations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_and_cash_equivalents__c</fullName>
        <label>Cash and cash equivalents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_flow_from_operating_activities_Adj__c</fullName>
        <label>Cash flow from operating activities(Adj)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_flow_from_operating_activities__c</fullName>
        <label>Cash flow from operating activities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Ratio__c</fullName>
        <label>Current Ratio</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Equity__c</fullName>
        <label>Debt Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EBITDA_Margin__c</fullName>
        <description>EBITDA Margin is equal to EBITDA divided by the Revenue</description>
        <formula>IF(Turnover__c = 0, 0, EBITDA__c  /  Turnover__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBITDA Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EBITDA_Net_Interest_cover__c</fullName>
        <formula>ROUND(EBITDA__c / Net_Interest_Expense_Income__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBITDA Net Interest cover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBITDA__c</fullName>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBIT__c</fullName>
        <label>EBIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPS__c</fullName>
        <label>EPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Results__c</fullName>
        <label>Financial Results Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audited Full Year</fullName>
                </value>
                <value>
                    <fullName>Interim Results</fullName>
                </value>
                <value>
                    <fullName>Management Accounts</fullName>
                </value>
                <value>
                    <fullName>Management Account</fullName>
                    <isActive>false</isActive>
                    <label>Management Account</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_Cash_Flow__c</fullName>
        <label>Free Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Debt_Cash_Ebitda__c</fullName>
        <formula>ROUND(Gross_Debt__c / EBITDA__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Debt (Cash)/Ebitda</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Debt__c</fullName>
        <label>Gross Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Cover_Ratio__c</fullName>
        <label>Interest Cover Ratio</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>For unaudited or interim results the month is also specified. Can only be inserted on current year.</description>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <isActive>false</isActive>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                    <label>12</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <isActive>false</isActive>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <isActive>false</isActive>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <isActive>false</isActive>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <isActive>false</isActive>
                    <label>9</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Asset_Value__c</fullName>
        <label>Net Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Debt_Cash_Ebitda__c</fullName>
        <formula>ROUND(Net_Debt__c / EBITDA__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Debt (Cash)/Ebitda</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Debt__c</fullName>
        <label>Net Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Interest_Expense_BAGL_facilities__c</fullName>
        <label>Net Interest Expense(BAGL facilities)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Interest_Expense_Income__c</fullName>
        <label>Net Interest Expense(Income)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_cash_generation_utilization__c</fullName>
        <label>Net cash (generation/utilization)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAT__c</fullName>
        <label>PAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Of_Months__c</fullName>
        <description>Number of months the Financial statement is based on</description>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROA__c</fullName>
        <label>ROA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROE__c</fullName>
        <label>ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Financial_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subordinated_Shareholder_Loans__c</fullName>
        <label>Subordinated Shareholder Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tangible_Gearing_Net_Debt_TNW__c</fullName>
        <formula>ROUND(Net_Debt__c / Tangible_Net_Worth__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tangible Gearing (Net Debt/TNW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tangible_Net_Worth__c</fullName>
        <label>Tangible Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Interest_Bearing_Debt__c</fullName>
        <label>Total Interest Bearing Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Liabilities__c</fullName>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tangible_Assets__c</fullName>
        <label>Total Tangible Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearString__c</fullName>
        <formula>TEXT(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YearString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client Plan Financial Information</label>
    <nameField>
        <displayFormat>FI{00000}</displayFormat>
        <label>Financial Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plan Financial Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>